--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,19 @@
 {
   "extends": "expo/tsconfig.base",
+
   "compilerOptions": {
-    "strict": true
+    "baseUrl": ".",
+    "strict": true,
+    "paths": {
+      "@screens/*": ["./screens/*"],
+      "@hooks/*": ["./hooks/*"],
+      "@components/*": ["./components/*"],
+      "@actions/*": ["./redux/action/*"],
+      "@configs/*": ["./config/*"],
+      "@helpers/*": ["./helper/*"],
+      "@constants/*": ["./constants/*"],
+      "@appTypes/*": ["./types/*"],
+      "@assets/*": ["./assets/*"]
+    }
   }
 }
